// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionHeader renders a default state 1`] = `
<div
  className="fui-AccordionHeader"
>
  <button
    aria-expanded={false}
    className="fui-AccordionHeader__button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      aria-hidden={true}
      className="fui-AccordionHeader__expandIcon"
    >
      <svg
        aria-hidden={true}
        className=""
        fill="currentColor"
        height="1em"
        style={
          Object {
            "transform": "rotate(0deg)",
          }
        }
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Default AccordionHeader
  </button>
</div>
`;

exports[`AccordionHeader renders when expandIcon is null 1`] = `
<div
  className="fui-AccordionHeader"
>
  <button
    aria-expanded={false}
    className="fui-AccordionHeader__button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Default AccordionHeader
  </button>
</div>
`;
